--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="pb-1">Age:</div>
           </div>
           <div class="col-sm-10">
-            <div class="pb-1 fw-bolder">22</div>
+            <div class="pb-1 fw-bolder">23</div>
           </div>
           <div class="col-sm-2">
             <div class="pb-1">Email:</div>
@@ -116,7 +116,7 @@
          
         </div>
       </div>
-      <div class="col-md-5 offset-md-1" data-aos="fade-left" data-aos-delay="100"><img class="avatar img-fluid mt-2" src="images/avatar31.jpg" width="400" height="400" alt="Walter Patterson"/></div>
+      <div class="col-md-5 offset-md-1" data-aos="fade-left" data-aos-delay="100"><img class="avatar img-fluid mt-2" src="images/avatar32.jpg" width="400" height="400" alt="Walter Patterson"/></div>
     </div>
   </div>
 </div>
@@ -182,9 +182,9 @@
             </div>
           </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">React</span><span>35%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">React</span><span>55%</span></div>
             <div class="progress my-1">
-              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 35%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 55%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
         </div>
@@ -196,7 +196,7 @@
             </div>
           </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">WordPress</span><span>70%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">MongoDb</span><span>70%</span></div>
             <div class="progress my-1">
               <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500" data-aos-anchor=".skills-section" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -208,7 +208,7 @@
             </div>
           </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">Photoshop</span><span>60%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Nodejs</span><span>60%</span></div>
             <div class="progress my-1">
               <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -242,7 +242,7 @@
       <div class="grid-item"><a href="https://github.com/eneserendp">
           <figure class="portfolio-item"><img src="images/portfolio/Working at night 🥰.jpeg" data-bp="images/portfolio/3.jpg" data-caption="Example of an optional caption."/>
             <figcaption> 
-              <h4 class="h5 mb-0">Teklif Formu</h4>
+              <h4 class="h5 mb-0">TeknoEmlak</h4>
               <div>github.com/eneserendp</div>
             </figcaption>
           </figure></a></div>
@@ -391,7 +391,6 @@
         <nav role="navigation">
           <ul class="nav justify-content-center">
             <li class="nav-item"><a class="nav-link" href="https://twitter.com/eneserendp" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/eneseren.demirpolat" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a></li>
             <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/eneserendp/" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a></li>
             <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/enes-eren-demirpolat-3b1450220/" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
             
