Bugfix: index.html dosyasında XYZ hatasını düzelttim

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Enes Eren Demirpolat</title>
+    <title>Deneme Yazısı </title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700;800&amp;display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700;800&amp;display=swap" media="print" onload="this.media='all'"/>
@@ -40,7 +40,7 @@
               <a class="navbar-brand" href="index.html">
                 <span class="fa fa-laptop"></span>
             </a>
-              <li class="nav-item"><a class="nav-link" href="#about">Hakkımda</a></li>
+              <li class="nav-item"><a class="nav-link" href="#about">hakkı</a></li>
               <li class="nav-item"><a class="nav-link" href="#services">Hizmetlerim</a></li>
               <li class="nav-item"><a class="nav-link" href="#skills">Özelliklerim</a></li>
               <li class="nav-item"><a class="nav-link" href="#portfolio">Projelerim</a></li>
